--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,32 @@
 <html>
 <head>
     <title>Ratings</title>
+    <style>
+    table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+    }
+
+    td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+    }
+
+    tr:nth-child(even) {
+        background-color: #dddddd;
+    }
+    </style>
 </head>
 
 <body>
+    {% if 'user_id' in session %}
+
+        <div>User ID: {{ session['user_id'] }}</div>
+
+    {% endif %}
+
     Ratings
     <hr>
     <ul>
