cleaned up styling and completed docstrings

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,8 @@
     {% if 'user_id' in session %}
 
         <div>User ID: {{ session['user_id'] }}</div>
+         <a href="/process_logout">Logout</a>
+
 
     {% endif %}
 
